# compiler-bot

./: Cargo.toml  README.md  flake.nix  rust-toolchain
.github/workflows/: lints.yml  publish.yml
docker/: c.Dockerfile  cpp.Dockerfile  node.Dockerfile  python.Dockerfile  scala.Dockerfile
src/: config.rs  docker_executor.rs  main.rs  prelude.rs  utils.rs
src/commands/: compile.rs  info.rs  mod.rs
src/runners/: cpp.rs  javascript.rs  mod.rs  python.rs  scala.rs  typescript.rs
